deploy: 734518cabf93c5a81f9fb23449a6ce8e15a44bd9

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -874,11 +874,8 @@
 
 <h2 id="examples">Examples</h2>
 <h3 id="style-1">Style 1</h3>
-<blockquote>
-<p>This is the example found in the assignment, uses more html</p>
-</blockquote>
-<p><em>Table 1: Example component selection</em></p>
-<p><strong>External Clock Module</strong></p>
+<p><em>Table 1: Component selection</em></p>
+<p><strong>Op-amp</strong></p>
 <table>
 <thead>
 <tr>
@@ -889,14 +886,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image1.png" data-desc-position="bottom"><img alt="" src="../image1.png"></a><br>Option 1.<br> XC1259TR-ND surface mount crystal<br>$1/each<br><a href="http://www.digikey.com/product-detail/en/ECS-40.3-S-5PX-TR/XC1259TR-ND/827366">link to product</a></td>
-<td>* Inexpensive[^1]<br>* Compatible with PSoC<br>* Meets surface mount constraint of project</td>
-<td>* Requires external components and support circuitry for interface<br>* Needs special PCB layout.</td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/001/202/810/296%7E4040049%7EN%7E14_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/001/202/810/296%7E4040049%7EN%7E14_sml%28200x200%29.jpg"></a><br>Option 1.<br> Texas Instruments LM324N Op-Amp <br>$0.47/each<br><a href="https://www.digikey.com/en/products/detail/texas-instruments/LM324N/277627?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a5X-zmEJKmNZMW9i0mgZEf2CLNNFkNgYv0SQP5R-WgAl9fvP6RbI8EaAvDtEALw_wcB">link to product</a></td>
+<td>* Inexpensive<br>* Low power <br>* single supply operation</td>
+<td>* No rail to rail input/output<br>* Can't handle fast changing signals.</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image3.png" data-desc-position="bottom"><img alt="" src="../image3.png"></a><br>* Option 2. <br>* CTX936TR-ND surface mount oscillator <br>* $1/each <br>* <a href="http://www.digikey.com/product-detail/en/636L3I001M84320/CTX936TR-ND/2292940">Link to product</a></td>
-<td>* Outputs a square wave <br>* Stable over operating temperature <br> * Direct interface with PSoC (no external circuitry required) range</td>
-<td>* More expensive <br>* Slow shipping speed</td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/010/927/070/150%7EC04-005%7EP%2C-PD%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/010/927/070/150%7EC04-005%7EP%2C-PD%7E14_sml.jpg"></a><br>* Option 2. <br>* MCP6004-I/P-ND Op-amp <br>* $0.59/each <br>* <a href="https://www.digikey.com/en/products/detail/microchip-technology/MCP6004-I-P/523060?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a5mU3gvabJ0blhmie9w81Q18eLWlkL3ABVWDsQnz9WJitiZg9sx0lcaAsvLEALw_wcB">Link to product</a></td>
+<td>* Quad op-amp <br>* Low current draw <br> * rail to rail</td>
+<td>* More noise <br>* Lower gain bandwidth</td>
+</tr>
+<tr>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 2. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
+<td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
+<td>* More expensive <br>* Dual op-amp may limit ideas</td>
 </tr>
 </tbody>
 </table>
