deploy: 503e6041697976d63d7a2223c10f5051cd17df97

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -783,11 +783,11 @@
 </tr>
 <tr>
 <td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/010/927/070/150%7EC04-005%7EP%2C-PD%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/010/927/070/150%7EC04-005%7EP%2C-PD%7E14_sml.jpg"></a><br>* Option 2. <br>* MCP6004-I/P-ND Op-amp <br>* $0.59/each <br>* <a href="https://www.digikey.com/en/products/detail/microchip-technology/MCP6004-I-P/523060?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a5mU3gvabJ0blhmie9w81Q18eLWlkL3ABVWDsQnz9WJitiZg9sx0lcaAsvLEALw_wcB">Link to product</a></td>
-<td>* Quad op-amp <br>* Low current draw <br> * rail to rail</td>
-<td>* More noise <br>* Lower gain bandwidth</td>
+<td>* Integrated amplifier <br>* Wide operating voltage <br> * compact design</td>
+<td>* Potential power noise <br>* Sensitivity limitations <br>* Limited frequency range</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 2. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 3. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
 <td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
 <td>* More expensive <br>* Dual op-amp may limit ideas</td>
 </tr>
@@ -847,7 +847,7 @@
 <td>* More noise <br>* Lower gain bandwidth</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 2. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 3. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
 <td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
 <td>* More expensive <br>* Dual op-amp may limit ideas</td>
 </tr>
@@ -877,7 +877,7 @@
 <td>* More noise <br>* Lower gain bandwidth</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 2. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 3. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
 <td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
 <td>* More expensive <br>* Dual op-amp may limit ideas</td>
 </tr>
