deploy: c8df45bf9683187ad77fc83c8587fc76a04fddfc

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -818,13 +818,13 @@
 </tr>
 <tr>
 <td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/2/001/212/MFG_MFG_CMA-4544PF-W%28640x640%29.jpg?hidebanner=true" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/2/001/212/MFG_MFG_CMA-4544PF-W%28640x640%29.jpg?hidebanner=true"></a><br>* Option 2. <br>* CMA-4544PF-W Microphone <br>* $0.76/each <br>* <a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/CMA-4544PF-W/1869981?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a68c1BZp6LEFrLCHPUIop5vsIPro80buftPfndr3yCjhH8FneqTxqMaAmJ3EALw_wcB">Link to product</a></td>
-<td>* Integrated amplifier <br>* More compact <br> * Wide operating voltage</td>
-<td>* More expensive <br>* Limited frequency range <br>* Potential power noise</td>
+<td>* Low power draw <br>* Wide frequency range t <br> * Uniform sensitivity in all directions</td>
+<td>* Weaker sensitivity at lower voltages <br>* Susceptible to picking up background noise <br>* Lower sensitivity</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Choice:</strong> Option 2: MCP6004-I/P-ND Op-amp</p>
-<p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
+<p><strong>Choice:</strong> Option 1: RS PRO 7542100 Microphone </p>
+<p><strong>Rationale:</strong> The compact size of this microphone will allow it to easily fit within the device. It's wide frequency range, omni-directional noise detection, and sensitivity makes it ideal for ambient sound capture in space-constrained, low-power spaces.</p>
 <p><em>Table 3: Component selection (voltage regulator)</em></p>
 <p><strong>Voltage regulator</strong></p>
 <table>
@@ -855,8 +855,8 @@
 </table>
 <p><strong>Choice:</strong> Option 2: MCP6004-I/P-ND Op-amp</p>
 <p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
-<p><em>Table 4: Component selection (button)</em></p>
-<p><strong>Button</strong></p>
+<p><em>Table 4: Component selection (button/switch)</em></p>
+<p><strong>Button/switch</strong></p>
 <table>
 <thead>
 <tr>
@@ -867,23 +867,23 @@
 </thead>
 <tbody>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/001/202/810/296%7E4040049%7EN%7E14_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/001/202/810/296%7E4040049%7EN%7E14_sml%28200x200%29.jpg"></a><br>Option 1.<br> Texas Instruments LM324N Op-Amp <br>$0.47/each<br><a href="https://www.digikey.com/en/products/detail/texas-instruments/LM324N/277627?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a5X-zmEJKmNZMW9i0mgZEf2CLNNFkNgYv0SQP5R-WgAl9fvP6RbI8EaAvDtEALw_wcB">link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/097/065/MFG_SLW-1276864-4A-D_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/097/065/MFG_SLW-1276864-4A-D_sml.jpg"></a><br>Option 1.<br> SLW-1276864-4A-D slide switch <br>$0.83/each<br><a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/SLW-1276864-4A-D/21259972?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUogdHyGewqv60Zaberelrh0tdkJGfGpT9-0Czo_POhdVcJfAG18uRhoCAyYQAvD_BwE&amp;gclsrc=aw.ds">link to product</a></td>
 <td>* Inexpensive<br>* Low power <br>* single supply operation</td>
 <td>* No rail to rail input/output<br>* Can't handle fast changing signals.</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/010/927/070/150%7EC04-005%7EP%2C-PD%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/010/927/070/150%7EC04-005%7EP%2C-PD%7E14_sml.jpg"></a><br>* Option 2. <br>* MCP6004-I/P-ND Op-amp <br>* $0.59/each <br>* <a href="https://www.digikey.com/en/products/detail/microchip-technology/MCP6004-I-P/523060?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a5mU3gvabJ0blhmie9w81Q18eLWlkL3ABVWDsQnz9WJitiZg9sx0lcaAsvLEALw_wcB">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/030/749/623/MFG_TS02-Sm-BK-LCR_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/030/749/623/MFG_TS02-Sm-BK-LCR_sml.jpg"></a><br>* Option 2. <br>* TS02-66-43-BK-260-LCR-D button <br>* $0.10/each <br>* <a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/TS02-66-43-BK-260-LCR-D/15634346?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUjayaYvLXFGwod0w6Z9rmtI8A7dB_Ue2x6Pz7yvasxVuSKlQZcvzBhoCz0cQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
 <td>* Quad op-amp <br>* Low current draw <br> * rail to rail</td>
 <td>* More noise <br>* Lower gain bandwidth</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/200/086/208/505%7ER-14%7ER%2CS%7E14_sml.jpg"></a><br>* Option 3. <br>* AD8669ARZ Op-amp <br>* $9.36/each <br>* <a href="https://www.digikey.com/en/products/detail/analog-devices-inc/AD8669ARZ/1766867?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a6_oGgJXxEZETfUrJQS6UQywQOC_dS5omczopwZEbmNXHzO9C1Lu8saAvGqEALw_wcB">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* 418117270901 switch <br>* $0.85/each <br>* <a href="https://www.digikey.com/en/products/detail/w-rth-elektronik/418117270901/3174480?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUlbHgzLF46IocoMOaw_awmely5ZupR1lnszwMFjaSwBDW9xo05XZuRoCbAgQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
 <td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
 <td>* More expensive <br>* Dual op-amp may limit ideas</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Choice:</strong> Option 2: MCP6004-I/P-ND Op-amp</p>
+<p><strong>Choice:</strong> Option 2: TS02-66-43-BK-260-LCR-D button</p>
 <p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
 
 
