deploy: 0bc125523558d92be5a273f8cfa1ce3a22f9c9a4

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -887,7 +887,7 @@
 <td>* More noise <br>* Lower gain bandwidth</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* 418117270901 switch <br>* $0.85/each <br>* <a href="https://www.digikey.com/en/products/detail/w-rth-elektronik/418117270901/3174480?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUlbHgzLF46IocoMOaw_awmely5ZupR1lnszwMFjaSwBDW9xo05XZuRoCbAgQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* 418117270901 switch <br>* $0.85/each <br> <a href="https://www.digikey.com/en/products/detail/w-rth-elektronik/418117270901/3174480?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUlbHgzLF46IocoMOaw_awmely5ZupR1lnszwMFjaSwBDW9xo05XZuRoCbAgQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
 <td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
 <td>* More expensive <br>* Dual op-amp may limit ideas</td>
 </tr>
