--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -847,23 +847,23 @@
 <td>* May overheat quickly<br>* High dropout <br>* May shut entire system if overheated</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/003/210/775/1662%7EYS003-D-P-SD-2.0%7EY%7E3_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/003/210/775/1662%7EYS003-D-P-SD-2.0%7EY%7E3_sml%28200x200%29.jpg"></a><br>* Option 2. <br>* S-812C50AY-B2-U</td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/003/210/775/1662%7EYS003-D-P-SD-2.0%7EY%7E3_sml%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/003/210/775/1662%7EYS003-D-P-SD-2.0%7EY%7E3_sml%28200x200%29.jpg"></a><br>* Option 2. <br> S-812C50AY-B2-U</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td>voltage regulator <br>* $2.28/each <br>* <a href="https://www.digikey.com/en/products/detail/ablic-inc/S-812C50AY-B2-U/3609196?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=21162233706&amp;gbraid=0AAAAADrbLliUjMZmW9Noe5ejE0zIGhnDP&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUvWiQhtwIGzL-1CnmucFMm5j1DfwWEFBi4mdaTywGiV6SN9JvQ3suxoCgcwQAvD_BwE">Link to product</a></td>
+<td>voltage regulator <br> $2.28/each <br> <a href="https://www.digikey.com/en/products/detail/ablic-inc/S-812C50AY-B2-U/3609196?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=21162233706&amp;gbraid=0AAAAADrbLliUjMZmW9Noe5ejE0zIGhnDP&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUvWiQhtwIGzL-1CnmucFMm5j1DfwWEFBi4mdaTywGiV6SN9JvQ3suxoCgcwQAvD_BwE">Link to product</a></td>
 <td>* Low current draw <br>* Low dropout <br> * More compact</td>
 <td>* Limited output current <br>* may not be compatible with all low voltage systems</td>
 </tr>
 <tr>
-<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/415/110/497%7ETO220-3TO220AB%7E%7E3_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/415/110/497%7ETO220-3TO220AB%7E%7E3_sml.jpg"></a><br>* Option 3. <br>* L7805CV voltage regulator <br>* $0.50/each <br>* <a href="https://www.digikey.com/en/products/detail/stmicroelectronics/L7805CV/585964?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUvEnyl-yuok7hRfbfTtKdwOWhlaiNQILElJN_30pZdMZOOKc8hjwuxoCNd0QAvD_BwE">Link to product</a></td>
+<td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/415/110/497%7ETO220-3TO220AB%7E%7E3_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/415/110/497%7ETO220-3TO220AB%7E%7E3_sml.jpg"></a><br>* Option 3. <br> L7805CV voltage regulator <br> $0.50/each <br> <a href="https://www.digikey.com/en/products/detail/stmicroelectronics/L7805CV/585964?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlgDuOhuCsO3lSPJC-xHYDZZ4&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUvEnyl-yuok7hRfbfTtKdwOWhlaiNQILElJN_30pZdMZOOKc8hjwuxoCNd0QAvD_BwE">Link to product</a></td>
 <td>* High output current <br>* Built in thermal and circuit protection <br> * Inexpensive</td>
 <td>* High dropout <br>* Efficiency decreases with higher voltage</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Choice:</strong> Option 2: MCP6004-I/P-ND Op-amp</p>
+<p><strong>Choice:</strong> Option 3: MCP6004-I/P-ND Op-amp</p>
 <p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
 <p><em>Table 4: Component selection (button/switch)</em></p>
 <p><strong>Button/switch</strong></p>
