--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -853,8 +853,8 @@
 </tr>
 </tbody>
 </table>
-<p><strong>Choice:</strong> Option 3: MCP6004-I/P-ND Op-amp</p>
-<p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
+<p><strong>Choice:</strong> Option 3: L7805CV voltage regulator</p>
+<p><strong>Rationale:</strong> This one is ideal, as it offers a fixed 5 V output with up to ~1.5 A of current, built‑in protection, and ease of use with minimal external components. Its reliability and tolerance to voltage variations make it a safe, straightforward choice as there’s enough headroom voltage to dissipate heat.</p>
 <p><em>Table 4: Component selection (button/switch)</em></p>
 <p><strong>Button/switch</strong></p>
 <table>
@@ -868,23 +868,23 @@
 <tbody>
 <tr>
 <td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/097/065/MFG_SLW-1276864-4A-D_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/300/097/065/MFG_SLW-1276864-4A-D_sml.jpg"></a><br>Option 1.<br> SLW-1276864-4A-D slide switch <br>$0.83/each<br><a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/SLW-1276864-4A-D/21259972?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUogdHyGewqv60Zaberelrh0tdkJGfGpT9-0Czo_POhdVcJfAG18uRhoCAyYQAvD_BwE&amp;gclsrc=aw.ds">link to product</a></td>
-<td>* Inexpensive<br>* Low power <br>* single supply operation</td>
-<td>* No rail to rail input/output<br>* Can't handle fast changing signals.</td>
+<td>* Good for low power loads<br>* Raised actuator <br>* Moderate mechanical lifespan</td>
+<td>* Limited switching cycles <br>* On-on signal may cause shorts</td>
 </tr>
 <tr>
 <td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/030/749/623/MFG_TS02-Sm-BK-LCR_sml.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/030/749/623/MFG_TS02-Sm-BK-LCR_sml.jpg"></a><br>* Option 2. <br>* TS02-66-43-BK-260-LCR-D button <br>* $0.10/each <br>* <a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/TS02-66-43-BK-260-LCR-D/15634346?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUjayaYvLXFGwod0w6Z9rmtI8A7dB_Ue2x6Pz7yvasxVuSKlQZcvzBhoCz0cQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
-<td>* Quad op-amp <br>* Low current draw <br> * rail to rail</td>
-<td>* More noise <br>* Lower gain bandwidth</td>
+<td>* Minimal voltage drop when switch is closed <br>* High mechanical life <br> * Wide tempe range for use</td>
+<td>* Low current rating <br>* More force required to operate it <br>* Not sealed from dust or moisture</td>
 </tr>
 <tr>
 <td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/1/002/492/MFG_418117270901_sml%20%28200x200%29.jpg"></a><br>* Option 3. <br>* 418117270901 switch <br>* $0.85/each <br> <a href="https://www.digikey.com/en/products/detail/w-rth-elektronik/418117270901/3174480?gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUlbHgzLF46IocoMOaw_awmely5ZupR1lnszwMFjaSwBDW9xo05XZuRoCbAgQAvD_BwE&amp;gclsrc=aw.ds">Link to product</a></td>
-<td>* Dual op-amp <br>* Rail to rail input/output <br> * Low offset</td>
-<td>* More expensive <br>* Dual op-amp may limit ideas</td>
+<td>* Lower voltage required <br>* More compact <br> * Low corrosion</td>
+<td>* Single pole <br>* Cant handle high voltage</td>
 </tr>
 </tbody>
 </table>
 <p><strong>Choice:</strong> Option 2: TS02-66-43-BK-260-LCR-D button</p>
-<p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
+<p><strong>Rationale:</strong> The button was chosen for its compactness and user friendliness. With a 50 mA current rating and 12 VDC voltage rating, it is appropriate for low-power control circuits. The switch's 60,000-cycle mechanical life ensures durability for typical user interactions. </p>
 
 
 
