deploy: ea80017654d2ef20cad24f772ef53d7c744ae731

--- a/05-Power-Budget/Power-Budget/index.html
+++ b/05-Power-Budget/Power-Budget/index.html
@@ -865,7 +865,7 @@
 <blockquote>
 <p>Capture your power budge as a image to display. Take time to get clean breaks and a well organized layout.</p>
 </blockquote>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.pdf" data-desc-position="bottom"><img alt="budget1" height:_300_="height:&quot;300;&quot;" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.pdf" style="style" width:_350_="width:&quot;350&quot;"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true" data-desc-position="bottom"><img alt="budget1" height:_300_="height:&quot;300;&quot;" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true" style="style" width:_350_="width:&quot;350&quot;"></a></p>
 <h2 id="conclusions">Conclusions</h2>
 <p>From the prepare Power Budget, it is clear that the chosen power supply and voltage regulator meet the current and voltage requirements of all major components with a sufficient safety margin. It showns that the system will operate reliably without power issues.</p>
 <h2 id="resouces">Resouces</h2>
