--- a/05-Power-Budget/Power-Budget/index.html
+++ b/05-Power-Budget/Power-Budget/index.html
@@ -862,10 +862,8 @@
 
 <h2 id="overview">Overview</h2>
 <p>This power budget confirms that the power supply and voltage regulator can safely provide enough current for all major components. This helps ensure stable operation, prevents overload, and takes into account a 25% margin of safety</p>
-<blockquote>
-<p>Capture your power budge as a image to display. Take time to get clean breaks and a well organized layout.</p>
-</blockquote>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true" data-desc-position="bottom"><img alt="budget1" height:_300_="height:&quot;300;&quot;" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true" style="style" width:_350_="width:&quot;350&quot;"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true" data-desc-position="bottom"><img alt="budget1" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true"></a>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download%20(1).png?raw=true" data-desc-position="bottom"><img alt="budget2" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download%20(1).png?raw=true"></a></p>
 <h2 id="conclusions">Conclusions</h2>
 <p>From the prepare Power Budget, it is clear that the chosen power supply and voltage regulator meet the current and voltage requirements of all major components with a sufficient safety margin. It showns that the system will operate reliably without power issues.</p>
 <h2 id="resouces">Resouces</h2>
