--- a/05-Power-Budget/Power-Budget/index.html
+++ b/05-Power-Budget/Power-Budget/index.html
@@ -862,12 +862,12 @@
 
 <h2 id="overview">Overview</h2>
 <p>This power budget confirms that the power supply and voltage regulator can safely provide enough current for all major components. This helps ensure stable operation, prevents overload, and takes into account a 25% margin of safety</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true" data-desc-position="bottom"><img alt="budget1" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/download.png?raw=true"></a>
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20151851.png?raw=true" data-desc-position="bottom"><img alt="budget2" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20151851.png?raw=true"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152542.png?raw=true" data-desc-position="bottom"><img alt="budget1" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152542.png?raw=true"></a>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152557.png?raw=true" data-desc-position="bottom"><img alt="budget2" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152557.png?raw=true"></a></p>
 <h2 id="conclusions">Conclusions</h2>
 <p>From the prepare Power Budget, it is clear that the chosen power supply and voltage regulator meet the current and voltage requirements of all major components with a sufficient safety margin. It showns that the system will operate reliably without power issues.</p>
 <h2 id="resouces">Resouces</h2>
-<p>The power budget as a PDF download is available <a href="../PowerBudgetExample.pdf"><em>here</em></a>, and a Microsoft Excel Sheet <a href="../PowerBudgetExample.xlsx"><em>here</em></a>.</p>
+<p>The power budget as a PDF download is available <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.pdf"><em>here</em></a>.</p>
 
 
 
