deploy: ce1e5162d7cc2601743dabedb53808ae294e22ae

--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -843,7 +843,7 @@
   <h1>Schematic</h1>
 
 <h2 id="overview">Overview</h2>
-<p>This schematic is design to detect audio through a microphone and send a signal to a separate board to turn on and off a set of lights.</p>
+<p>This schematic is designed to detect audio through a microphone and send a signal to a separate board to turn on and off a set of lights.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20schematic%20ss.png?raw=true" data-desc-position="bottom"><img alt="schematic" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20schematic%20ss.png?raw=true"></a>
 <strong>Figure 1:</strong> Sound board schematic</p>
 <h2 id="resouces">Resouces</h2>
