--- a/index.html
+++ b/index.html
@@ -840,12 +840,12 @@
   <h1>Welcome</h1>
 
 <p></p><center>
-<font size="6">(Arianna Lazaritt) Datasheet</font><br>
+<font size="6">Arianna Lazaritt's Datasheet</font><br>
 as part of<br>
 <font size="8"> Project Name</font><br>
 for<br>
 <font size="5"> Team 205 </font><br><p></p>
-<p><strong>Submission: month, DD, YYYY</strong>
+<p><strong>Submission: 10, 27, 2025</strong>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
 <ul>
