--- a/05-Power-Budget/Power-Budget/index.html
+++ b/05-Power-Budget/Power-Budget/index.html
@@ -861,11 +861,11 @@
   <h1>Power Budget</h1>
 
 <h2 id="overview">Overview</h2>
-<p>This power budget confirms that the power supply and voltage regulator can safely provide enough current for all major components. This helps ensure stable operation, prevents overload, and takes into account a 25% margin of safety</p>
+<p>This power budget confirms that the power supply and voltage regulator can safely provide enough current for all major components.By summing the estimated current draw of each component and taking into account a 25% safety margin, it ensures stable operation, prevents overload, and guides design decisions.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152542.png?raw=true" data-desc-position="bottom"><img alt="budget1" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152542.png?raw=true"></a>
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152557.png?raw=true" data-desc-position="bottom"><img alt="budget2" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/Screenshot%202025-10-16%20152557.png?raw=true"></a></p>
 <h2 id="conclusions">Conclusions</h2>
-<p>From the prepare Power Budget, it is clear that the chosen power supply and voltage regulator meet the current and voltage requirements of all major components with a sufficient safety margin. It showns that the system will operate reliably without power issues.</p>
+<p>From the prepared Power Budget, it is clear that the chosen power supply and voltage regulator meet the current and voltage requirements of all major components with a sufficient safety margin. It showns that the system will operate reliably without power issues.</p>
 <h2 id="resouces">Resouces</h2>
 <p>The power budget as a PDF download is available <a href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/05-Power-Budget/PowerBudgetExample.pdf"><em>here</em></a>.</p>
 
