--- a/index.html
+++ b/index.html
@@ -849,13 +849,13 @@ for<br>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
 <ul>
-<li>This needs to be updated so that a reader gets an idea of the purpose of this datasheet.</li>
+<li>This datasheet provides an overview of the sound detection board, a key component within my team's hands-free lighting system, explaining its design, functionality, and integration within the overall project. It includes a block diagram illustrating how the microphone, operational amplifier, and microcontroller interact to detect and process sound, explanations of component selection, the circuit schematic, and the board’s power budget. This document should serve as a technical reference and provide a clear understanding of the board’s operation and its contribution to the system’s automatic lighting function. </li>
 </ul>
 <h3 id="project-summary">Project Summary</h3>
 <ul>
-<li>This needs to be updated to reflect <ins>your version</ins> of the team project, so when shared not via the team's report, the reader gets an idea of the direction of the project and how your work will contribute to the overall success.</li>
-<li>Add context that ties into the link to your <a href="https://egr304-team-205-2025-f.github.io/EGR304-2025-F-205.github.io">team report.</a></li>
+<li>My part of the overall project focuses on the sound detection board. It uses a microphone to capture specific audio cues, which is then amplified by an op-amp. This signal is then processed by a microcontroller that will determine if the detected sound has reached a certain threshold to then send a signal to a separate controls board. That separate board will take the signal from my sound detection board and relay it to a light control board to either turn on or off a set of lights. </li>
 </ul>
+<p>The successful development of this module is critical to the overall performance of the team project. By providing accurate and timely sound detection, my work ensures that the lighting system can respond reliably to auditory cues. This complements the motion detection module and enhances the system’s functionality, contributing directly to the team’s objective of creating an intelligent, hands-free lighting solution. More details on project requirements, user needs, and other aspects of the overall system can be found in the <a href="https://egr304-team-205-2025-f.github.io/EGR304-2025-F-205.github.io">team report.</a></p>
 <h3 id="my-contribution">My Contribution</h3>
 <ul>
 <li>This needs to be updated to reflect a team introduction</li>
