--- a/index.html
+++ b/index.html
@@ -848,13 +848,9 @@ for<br>
 <p><strong>Submission: 10, 27, 2025</strong>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
-<ul>
-<li>This datasheet provides an overview of the sound detection board, a key component within my team's hands-free lighting system, explaining its design, functionality, and integration within the overall project. It includes a block diagram illustrating how the microphone, operational amplifier, and microcontroller interact to detect and process sound, explanations of component selection, the circuit schematic, and the board’s power budget. This document should serve as a technical reference and provide a clear understanding of the board’s operation and its contribution to the system’s automatic lighting function. </li>
-</ul>
+<p>This datasheet provides an overview of the sound detection board, a key component within my team's hands-free lighting system, explaining its design, functionality, and integration within the overall project. It includes a block diagram illustrating how the microphone, operational amplifier, and microcontroller interact to detect and process sound, explanations of component selection, the circuit schematic, and the board’s power budget. This document should serve as a technical reference and provide a clear understanding of the board’s operation and its contribution to the system’s automatic lighting function. </p>
 <h3 id="project-summary">Project Summary</h3>
-<ul>
-<li>My part of the overall project focuses on the sound detection board. It uses a microphone to capture specific audio cues, which is then amplified by an op-amp. This signal is then processed by a microcontroller that will determine if the detected sound has reached a certain threshold to then send a signal to a separate controls board. That separate board will take the signal from my sound detection board and relay it to a light control board to either turn on or off a set of lights. </li>
-</ul>
+<p>My part of the overall project focuses on the sound detection board. It uses a microphone to capture specific audio cues, which is then amplified by an op-amp. This signal is then processed by a microcontroller that will determine if the detected sound has reached a certain threshold to then send a signal to a separate controls board. That separate board will take the signal from my sound detection board and relay it to a light control board to either turn on or off a set of lights. </p>
 <p>The successful development of this module is critical to the overall performance of the team project. By providing accurate and timely sound detection, my work ensures that the lighting system can respond reliably to auditory cues. This complements the motion detection module and enhances the system’s functionality, contributing directly to the team’s objective of creating an intelligent, hands-free lighting solution. More details on project requirements, user needs, and other aspects of the overall system can be found in the <a href="https://egr304-team-205-2025-f.github.io/EGR304-2025-F-205.github.io">team report.</a></p>
 <h3 id="my-contribution">My Contribution</h3>
 <ul>
