--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -794,7 +794,7 @@
 </tbody>
 </table>
 <p><strong>Choice:</strong> Option 2: MCP6004-I/P-ND Op-amp</p>
-<p><strong>Rationale:</strong> This op-amp will be most ideal to work with due to its high signal range and low power operation. It has a compact design which will reduce board space, and it is also extremly cost-efficient.</p>
+<p><strong>Rationale:</strong> This op-amp will be most ideal to work with since it balances low power, high signal range, compact size, and cost. Unlike the other options, it handles faster signals, and it is more affordable and simpler than them. It meets our low-power, space-constrained audio amplification requirements.</p>
 <p><em>Table 1: Component selection (microphone)</em></p>
 <p><strong>Microphone</strong></p>
 <table>
