deploy: e4d9d5e97f39c7d9ec4bcd290a123c69dc131d61

--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -843,7 +843,7 @@
   <h1>Schematic</h1>
 
 <h2 id="overview">Overview</h2>
-<p>This schematic is designed to detect audio through a microphone and send a signal to a separate board to turn on and off a set of lights.</p>
+<p>The schematic illustrates how the system effectively converts audio input from a microphone into a control signal for a separate board to operate lights, fulfilling both user needs and product requirements. The microphone captures sound, while the amplification and filtering circuitry ensure the signal is clean enough to avoid false signals, allowing for reliable and responsive operation. This design ensures accurate detection, interfacing with the light board, and safe operation, directly aligning the system’s functionality with the intended user experience and technical specifications.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20schematic%20ss.png?raw=true" data-desc-position="bottom"><img alt="schematic" src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/04-Schematic/individual%20schematic%20ss.png?raw=true"></a>
 <strong>Figure 1:</strong> Sound board schematic</p>
 <h2 id="resouces">Resouces</h2>
