deploy: 64583e54e2006a0e0e44345f56dc06ce4497a5af

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -818,13 +818,13 @@
 </tr>
 <tr>
 <td><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/2/001/212/MFG_MFG_CMA-4544PF-W%28640x640%29.jpg?hidebanner=true" data-desc-position="bottom"><img alt="" src="https://mm.digikey.com/Volume0/opasdata/d220001/derivates/2/001/212/MFG_MFG_CMA-4544PF-W%28640x640%29.jpg?hidebanner=true"></a><br>* Option 2. <br>* CMA-4544PF-W Microphone <br>* $0.76/each <br>* <a href="https://www.digikey.com/en/products/detail/same-sky-formerly-cui-devices-/CMA-4544PF-W/1869981?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLlj1J1-wrnvGXGv0h4K-eIZg2&amp;gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a68c1BZp6LEFrLCHPUIop5vsIPro80buftPfndr3yCjhH8FneqTxqMaAmJ3EALw_wcB">Link to product</a></td>
-<td>* Low power draw <br>* Wide frequency range t <br> * Uniform sensitivity in all directions</td>
-<td>* Weaker sensitivity at lower voltages <br>* Susceptible to picking up background noise <br>* Lower sensitivity</td>
+<td>* Minimizes background noise <br>* Wide frequency range t <br> * Uniform sensitivity in all directions</td>
+<td>* Weaker sensitivity at lower voltages <br>* requires external tuning <br>* Lower sensitivity</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Choice:</strong> Option 1: RS PRO 7542100 Microphone </p>
-<p><strong>Rationale:</strong> The compact size of this microphone will allow it to easily fit within the device. It's wide frequency range, omni-directional noise detection, and sensitivity makes it ideal for ambient sound capture in space-constrained, low-power spaces.</p>
+<p><strong>Choice:</strong> Option 2: CMA-4544PF-W Microphone </p>
+<p><strong>Rationale:</strong> The compact size of this microphone will allow it to easily fit within the device. It's wide frequency range, omni-directional noise detection, and high signal-to-noise ratio lets it precisely read sound levels while minimizing background noise. </p>
 <p><em>Table 3: Component selection (voltage regulator)</em></p>
 <p><strong>Voltage regulator</strong></p>
 <table>
