deploy: 066db6af5f2db02c4e1dfc582b0d3e1df1a855a0

--- a/01-Block-Diagram/Block-Diagram/index.html
+++ b/01-Block-Diagram/Block-Diagram/index.html
@@ -866,7 +866,7 @@
 <h2 id="diagram-link">Diagram Link</h2>
 <p>A direct link to the source file of the following block diagram can be found <a href="https://github.com/alazaritt/alazaritt.github.io/raw/main/docs/01-Block-Diagram/individual%20block%20diagram.drawio">here</a>.</p>
 <h2 id="sound-board-block-diagram">Sound Board Block Diagram</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/01-Block-Diagram/individual%20block%20diagram1.drawio.png?raw=true" data-desc-position="bottom"><img alt="Individual Block diagram " src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/01-Block-Diagram/individual%20block%20diagram1.drawio.png?raw=true"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/01-Block-Diagram/individual%20block%20diagram.drawio.png?raw=true" data-desc-position="bottom"><img alt="Individual Block diagram " src="https://github.com/alazaritt/alazaritt.github.io/blob/main/docs/01-Block-Diagram/individual%20block%20diagram.drawio.png?raw=true"></a></p>
 
 
 
