--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -892,6 +892,28 @@
 </tr>
 <tr>
 <td style="text-align: left;">0.1 µF Ceramic Capacitor, +/-10%, X7R, 50V, 0805 package</td>
+<td style="text-align: left;">5</td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">C1, C2, C3, C4, C5</td>
+</tr>
+<tr>
+<td style="text-align: left;">Green LED</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">0.2750</td>
+<td style="text-align: left;">$2.75</td>
+<td style="text-align: left;">KEMET</td>
+<td style="text-align: left;">C0805F104K5RACTU</td>
+<td style="text-align: left;">PRLTA 109</td>
+<td style="text-align: left;">n/a</td>
+<td style="text-align: left;">C2, C4, C6, C7, C8, C9, C10, C11, C12, C16</td>
+</tr>
+<tr>
+<td style="text-align: left;">0.1 µF Ceramic Capacitor, +/-10%, X7R, 50V, 0805 package</td>
 <td style="text-align: left;">10</td>
 <td style="text-align: left;">0.2750</td>
 <td style="text-align: left;">$2.75</td>
